[package]
name = "wping"
version = "0.2.0"
description = "A ping command that tries to provide more useful output"
authors = ["Angelos Oikonomopoulos <a.oikonomopoulos@vu.nl>"]
license = "GPL-3.0"
keywords = ["ping", "network"]
readme = "README.md"
repository = "https://github.com/aoikonomopoulos/wping"

[dependencies.pnet]
version = "0.16.0"

[dependencies.pnet_macros_support]
version = "0.1.1"

[dependencies.libc]
version = "0.2"

[dependencies.argparse]
version = "0.2"

[dependencies.num]
version = "0.1.36"

[dependencies.resolve]
version = "0.1.2"

[dependencies.chrono]
version = "0.3.0"

[dependencies.byteorder]
version = "1.0.0"